Solved Hello, World.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(30DaysOfCodeCpp)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES com.hackerrank.carlos/day17/Day17.cpp)
+set(SOURCE_FILES src/com.hackerrank.carlos/day01/Day1.cpp)
 add_executable(30DaysOfCodeCpp ${SOURCE_FILES})
