--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(30DaysOfCodeCpp)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES src/com.hackerrank.carlos/day02/Day2.cpp)
+set(SOURCE_FILES src/com.hackerrank.carlos/day02/Day2.cpp src/com.hackerrank.carlos/day18/Day18.cpp)
 add_executable(30DaysOfCodeCpp ${SOURCE_FILES})
